<package>
  <name>wolf_navigation</name>
  <version>0.0.1</version>
  <description>
        This package provides navigation functionalities to WoLF
  </description>
  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>wolf_controller</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>

</package>
