<?xml version="1.0"?>
<package>
  <name>wolf_navigation</name>
  <version>0.0.1</version>
  <description>
        This package provides navigation functionalities to WoLF
  </description>
  <maintainer email="rollo.f96@gmail.com">Federico Rollo</maintainer>
  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>wolf_controller</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>

<!--
 <build_depend>roscpp</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>nav_msgs</build_depend>
 <build_depend>tf</build_depend>-->


 <run_depend>roscpp</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>geometry_msgs</run_depend>
 <run_depend>nav_msgs</run_depend>
 <run_depend>tf</run_depend>


</package>
