<?xml version="1.0"?>
<package format="2">
  <name>wolf_exploration</name>
  <version>0.0.1</version>

  <description> This is a package containing various tools for exploration of enviroments </description>

  <author email="gennaro.raiola@gmail.com"> Gennaro Raiola </author>
  <maintainer email="gennaro.raiola@gmail.com"> Gennaro Raiola </maintainer>

  <license>GNU General Public License v3.0</license>

  <!-- acknowledgements

  <author>Charles DuHadway</author>
  <url>http://ros.org/wiki/explore</url>

  <author>Paul Bovbel</author>
  <url>https://github.com/paulbovbel/frontier_exploration</url>

   <author>Jiri Horner</author>
   <url>https://github.com/hrnr/m-explore</url>

  -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf</depend>
  <depend>costmap_2d</depend>
  <depend>actionlib</depend>
  <depend>costmap_converter</depend>
  <depend>wolf_navigation_utils</depend>
  <test_depend>roslaunch</test_depend>

</package>
